@@ -68,6 +68,8 @@
 					} 
 					else if(!is_null($el)){
 						parent::AddItem(new CCol($el));
+					} else {
+						parent::AddItem('<td></td>');
 					}
 				}
 			}
