@@ -73,7 +73,8 @@
 					}
 					break;
 				case "ORACLE":
-					$DB = ocilogon($DB_USER, $DB_PASSWORD, $DB_DATABASE);
+					$DB = ociplogon($DB_USER, $DB_PASSWORD, $DB_DATABASE);
+/*					$DB = ocilogon($DB_USER, $DB_PASSWORD, $DB_DATABASE);*/
 					//$DB = ocilogon($DB_USER, $DB_PASSWORD, "(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=$DB_SERVER)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=$DB_DATABASE)))");
 					if(!$DB)
 					{
