@@ -54,7 +54,8 @@ void	zbx_db_close(void)
 	conn = NULL;
 #endif
 #ifdef	HAVE_ORACLE
-	sqlo_finish(oracle);
+	if (SQLO_SUCCESS != sqlo_finish(oracle))
+		zabbix_log(LOG_LEVEL_ERR, "Cannot finish ORACLE session");
 #endif
 #ifdef	HAVE_SQLITE3
 	sqlite_transaction_started = 0;
@@ -156,27 +157,38 @@ int	zbx_db_connect(char *host, char *user, char *password, char *dbname, char *d
 	return ret;
 #endif
 #ifdef	HAVE_ORACLE
-	char	*connect = NULL;
+	char	connect[MAX_STRING_LEN];
 
-	if (SQLO_SUCCESS != sqlo_init(SQLO_OFF, 1, 100))
-	{
+	if (SQLO_SUCCESS != sqlo_init(SQLO_OFF, 1, 100)) {
 		zabbix_log(LOG_LEVEL_ERR, "Failed to init libsqlora8");
-		exit(FAIL);
+
+		ret = ZBX_DB_FAIL;
 	}
 
-	/* login */ /* TODO: how to use port??? */
-	connect = zbx_dsprintf(connect, "%s/%s@%s", user, password, dbname);
+	if (ZBX_DB_OK == ret) {
+		zbx_strlcpy(connect, user, sizeof(connect));
 
-	if (SQLO_SUCCESS != sqlo_connect(&oracle, connect))
-	{
-		printf("Cannot login with %s\n", connect);
-		zabbix_log(LOG_LEVEL_ERR, "Cannot login with %s", connect);
-		exit(FAIL);
+		if (password && *password) {
+			zbx_strlcat(connect, "/", sizeof(connect));
+			zbx_strlcat(connect, password, sizeof(connect));
+
+			if (dbname && *dbname) {
+				zbx_strlcat(connect, "@", sizeof(connect));
+				zbx_strlcat(connect, dbname, sizeof(connect));
+			}
+		}
+
+		/* login */ /* TODO: how to use port??? */
+		if (SQLO_SUCCESS != sqlo_connect(&oracle, connect)) {
+			zabbix_log(LOG_LEVEL_ERR, "Cannot login with %s",
+					connect);
+
+			ret = ZBX_DB_FAIL;
+		}
 	}
 
-	zbx_free(connect);
-
-	sqlo_autocommit_on(oracle);
+	if (ZBX_DB_OK == ret)
+		sqlo_autocommit_on(oracle);
 
 	return ret;
 #endif
@@ -613,9 +625,6 @@ DB_ROW	zbx_db_fetch(DB_RESULT result)
 #endif
 #ifdef	HAVE_ORACLE
 	int res;
-
-	/* EOF */
-	if(!result)	return NULL;
 
 	res = sqlo_fetch(result, 1);
 
