@@ -66,6 +66,9 @@ Changes for 1.5:
 
 Changes for 1.4.5:
 
+ - [ZBX-295] fixed processing of null values under Oracle. Thanks to Max Lapan. (Sasha)
+ - [ZBX-340] Oracle related fixes. Thanks to Max Lapan. (Sasha)
+ - [ZBX-294,ZBX-296] Oracle related fixes. Thanks to Max Lapan. (Sasha)
  - [ZBX-343] fixed possible hang of server trapper process (Alexei)
  - [ZBX-341] fixed compilation problem under Tru64/OSF (Alexei)
  - [ZBX-338] png files for images_oracle.sql script (Sasha)
